// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voicePitch renders 0 1`] = `
Array [
  .c0 {
  voice-pitch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders function 1`] = `
Array [
  .c0 {
  voice-pitch: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-pitch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders negative number 1`] = `
Array [
  .c0 {
  voice-pitch: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  voice-pitch: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-pitch: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-pitch: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  voice-pitch: July;
}

@media May {
  .c0 {
    voice-pitch: August;
  }
}

@media April {
  .c0 {
    voice-pitch: September;
  }
}

@media January {
  .c0 {
    voice-pitch: November;
  }
}

@media April {
  .c0 {
    voice-pitch: August;
  }
}

@media June {
  .c0 {
    voice-pitch: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: July;
}

@media May {
  .c0 {
    voice-pitch: August;
  }
}

@media April {
  .c0 {
    voice-pitch: September;
  }
}

@media January {
  .c0 {
    voice-pitch: November;
  }
}

@media April {
  .c0 {
    voice-pitch: August;
  }
}

@media June {
  .c0 {
    voice-pitch: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-pitch: November;
  }
}

@media April {
  .c0 {
    voice-pitch: January;
  }
}

@media January {
  .c0 {
    voice-pitch: December;
  }
}

@media April {
  .c0 {
    voice-pitch: April;
  }
}

@media June {
  .c0 {
    voice-pitch: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-pitch: November;
  }
}

@media April {
  .c0 {
    voice-pitch: January;
  }
}

@media January {
  .c0 {
    voice-pitch: December;
  }
}

@media April {
  .c0 {
    voice-pitch: April;
  }
}

@media June {
  .c0 {
    voice-pitch: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    voice-pitch: July;
  }
}

@media April {
  .c0 {
    voice-pitch: August;
  }
}

@media January {
  .c0 {
    voice-pitch: September;
  }
}

@media April {
  .c0 {
    voice-pitch: November;
  }
}

@media June {
  .c0 {
    voice-pitch: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-pitch: July;
  }
}

@media April {
  .c0 {
    voice-pitch: August;
  }
}

@media January {
  .c0 {
    voice-pitch: September;
  }
}

@media April {
  .c0 {
    voice-pitch: November;
  }
}

@media June {
  .c0 {
    voice-pitch: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-pitch: January;
  }
}

@media April {
  .c0 {
    voice-pitch: December;
  }
}

@media January {
  .c0 {
    voice-pitch: April;
  }
}

@media April {
  .c0 {
    voice-pitch: May;
  }
}

@media June {
  .c0 {
    voice-pitch: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-pitch: January;
  }
}

@media April {
  .c0 {
    voice-pitch: December;
  }
}

@media January {
  .c0 {
    voice-pitch: April;
  }
}

@media April {
  .c0 {
    voice-pitch: May;
  }
}

@media June {
  .c0 {
    voice-pitch: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders postitive number 1`] = `
Array [
  .c0 {
  voice-pitch: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders string 1`] = `
Array [
  .c0 {
  voice-pitch: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitch renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`voicePitch renders valid theme path 1`] = `
Array [
  .c0 {
  voice-pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
